--- a/juniper/index.html
+++ b/juniper/index.html
@@ -91,7 +91,7 @@
                             </p> 
                             <p>
 
-                            <input type="submit" value="CIP컨피그 등록 - show compare"/>
+                            <input type="submit" value="CIP컨피그 등록 & show compare"/>
                             </p>
                         
    						</form>
@@ -111,7 +111,7 @@
                             </p> 
                             <p>
 
-                            <input type="submit" value="컨피그 API 전송"/>
+                            <input type="submit" value="컨피그 등록 & show compare"/>
                             </p>
                         
                         </form>
